--- a/src/App.css
+++ b/src/App.css
@@ -41,5 +41,12 @@
 }
 
 .selected {
-  background-color: brown;
+  background-color: #BACA2B;
+}
+
+.available {
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  background-color: firebrick;
 }
