--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,10 @@
   border-radius: 50%;
   background-color: firebrick;
 }
+
+.lost {
+  height: calc(50vh - 60px);
+  padding: 30px;
+  margin-left: 50px ;
+  background-color: darkseagreen;
+}
